@@ -1765,6 +1765,8 @@
 (defknown policy-quality (policy symbol) policy-quality
           (flushable))
 
+(defknown ensure-lexenv (t) lexenv-designator)
+
 (defknown compiler-error (t &rest t) nil ())
 (defknown (compiler-warn compiler-style-warn) (t &rest t) (values) ())
 (defknown (compiler-notify maybe-compiler-notify) ((or string symbol) &rest t)
